--- a/Project_DALI/templates/lights.html
+++ b/Project_DALI/templates/lights.html
@@ -5,8 +5,8 @@
   <div class="controls">
     <div>
       <label>串口</label>
-      <button id="serial-connect">连接串口(Web Serial)</button>
-      <span id="serial-status" class="serial-status">未连接</span>
+      <select id="port-select"></select>
+      <button id="port-refresh">刷新串口</button>
     </div>
     <div class="add-form">
       <input type="text" id="gw-hex" placeholder="网关地址(十六进制, 如 01)" value="01">
