--- a/Project_DALI/templates/lights.html
+++ b/Project_DALI/templates/lights.html
@@ -7,6 +7,8 @@
       <label>串口</label>
       <select id="port-select"></select>
       <button id="port-refresh">刷新串口</button>
+      <button id="port-confirm">确认串口</button>
+      <span id="port-status" class="serial-status">未设置</span>
     </div>
     <div class="add-form">
       <input type="text" id="gw-hex" placeholder="网关地址(十六进制, 如 01)" value="01">
