--- a/Project_DALI/templates/lights.html
+++ b/Project_DALI/templates/lights.html
@@ -20,6 +20,6 @@
   </div>
   <div id="lights-grid" class="lights-grid"></div>
   <div class="actions">
-    <button id="scan-devices">重新扫描设备</button>
+    <button id="export-devices">导出设备配置</button>
   </div>
 {% endblock %}
